This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: parse_string.c: free "str"
Type: Stage: resolved
Components: Versions:
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: lys.nikolaou, miss-islington, pablogsal, skrah
Priority: normal Keywords: patch

Created on 2020-06-05 22:56 by skrah, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 20667 merged pablogsal, 2020-06-05 23:18
PR 20669 merged miss-islington, 2020-06-05 23:52
Messages (3)
msg370795 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2020-06-05 22:56
Also in test_decimal, there's a small leak here:


==10040== 24 bytes in 1 blocks are definitely lost in loss record 549 of 5,095
==10040==    at 0x4C2DE56: malloc (vg_replace_malloc.c:299)
==10040==    by 0x643B33: fstring_compile_expr (parse_string.c:594)
==10040==    by 0x643B33: fstring_find_expr (parse_string.c:924)
==10040==    by 0x643B33: fstring_find_literal_and_expr (parse_string.c:1076)
==10040==    by 0x643B33: _PyPegen_FstringParser_ConcatFstring (parse_string.c:1293)
==10040==    by 0x644569: fstring_parse (parse_string.c:1409)
==10040==    by 0x644569: fstring_find_expr (parse_string.c:980)
==10040==    by 0x644569: fstring_find_literal_and_expr (parse_string.c:1076)
==10040==    by 0x644569: _PyPegen_FstringParser_ConcatFstring (parse_string.c:1293)
==10040==    by 0x62CE94: _PyPegen_concatenate_strings (pegen.c:2003)
==10040==    by 0x62EF52: strings_rule (parse.c:10834)
==10040==    by 0x62EF52: atom_rule (parse.c:10674)
==10040==    by 0x6389A2: t_primary_raw (parse.c:14042)
==10040==    by 0x6389A2: t_primary_rule (parse.c:13839)
==10040==    by 0x638D67: star_target_rule (parse.c:12684)
==10040==    by 0x6392FC: star_targets_rule (parse.c:12501)
==10040==    by 0x63BD7B: _tmp_135_rule (parse.c:23255)
==10040==    by 0x63BD7B: _loop1_22_rule (parse.c:16468)
==10040==    by 0x63BD7B: assignment_rule (parse.c:2116)
==10040==    by 0x63BD7B: small_stmt_rule (parse.c:1508)
==10040==    by 0x63DB44: simple_stmt_rule (parse.c:1406)
==10040==    by 0x63F995: statement_rule (parse.c:1240)
==10040==    by 0x63F995: _loop1_11_rule (parse.c:15835)
==10040==    by 0x63F995: statements_rule (parse.c:1175)
==10040==    by 0x63FB49: block_rule (parse.c:6127)
msg370797 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2020-06-05 23:52
New changeset a54096e30523534e8eebb8dc1011b4536ed237a8 by Pablo Galindo in branch 'master':
bpo-40883: Fix memory leak in fstring_compile_expr in parse_string.c (GH-20667)
https://github.com/python/cpython/commit/a54096e30523534e8eebb8dc1011b4536ed237a8
msg370799 - (view) Author: miss-islington (miss-islington) Date: 2020-06-06 00:11
New changeset 79e6c15aed9b4b50efd39ddaf1dc40c374b51213 by Miss Islington (bot) in branch '3.9':
bpo-40883: Fix memory leak in fstring_compile_expr in parse_string.c (GH-20667)
https://github.com/python/cpython/commit/79e6c15aed9b4b50efd39ddaf1dc40c374b51213
History
Date User Action Args
2022-04-11 14:59:32adminsetgithub: 85060
2020-06-06 00:44:52pablogsalsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-06-06 00:11:03miss-islingtonsetmessages: + msg370799
2020-06-05 23:52:30miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request19886
2020-06-05 23:52:19pablogsalsetmessages: + msg370797
2020-06-05 23:18:53pablogsalsetkeywords: + patch
stage: patch review
pull_requests: + pull_request19884
2020-06-05 22:56:57skrahcreate